azure-k8s-bare/templates/nexus-oss/82-docker-service.yaml
# -------------------------------------------------------------------
#
# Module:         k8s-terraform
# Submodule:      templates/nexus-oss/85-docker-service.yaml
# Environments:   all
# Purpose:        The yaml for the Nexus OSS docker proxy registry.
#
# Created on:     16 Jule 2019
# Created by:     David Sanders
# Creator email:  dsanderscanada@nospam-gmail.com
#
# -------------------------------------------------------------------
# Modifed On   | Modified By                 | Release Notes
# -------------------------------------------------------------------
# 16 Jul 2019  | David Sanders               | First release.
# -------------------------------------------------------------------
# 19 Aug 2019  | David Sanders               | Add other registries
#              |                             | as node ports.
# -------------------------------------------------------------------
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus-oss
  name: nexus-docker
spec:
  type: NodePort
  ports:
  - name: nexus-docker-port
    port: 18080
    targetPort: 18080
    nodePort: 32080
  - name: nexus-privatehub-port
    port: 18081
    targetPort: 18081
    nodePort: 32081
  - name: nexus-registryhub-port
    port: 18082
    targetPort: 18082
    nodePort: 32082
  - name: nexus-quay-port
    port: 18083
    targetPort: 18083
    nodePort: 32083
  - name: nexus-ms-mcr-port
    port: 18084
    targetPort: 18084
    nodePort: 32084
  selector:
    app: nexus-oss
status:
  loadBalancer: {}
