azure-k8s-bare/templates/nexus-oss/84-mcr-service.yaml
# -------------------------------------------------------------------
#
# Module:         k8s-terraform
# Submodule:      templates/nexus-oss/86-mcr-service.yaml
# Environments:   all
# Purpose:        The yaml for the Nexus OSS MCR proxy registry.
#
# Created on:     16 Jule 2019
# Created by:     David Sanders
# Creator email:  dsanderscanada@nospam-gmail.com
#
# -------------------------------------------------------------------
# Modifed On   | Modified By                 | Release Notes
# -------------------------------------------------------------------
# 16 Jul 2019  | David Sanders               | First release.
# -------------------------------------------------------------------
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus-oss
  name: nexus-mcr
spec:
  type: NodePort
  ports:
  - name: nexus-mcr-port
    port: 18084
    targetPort: 18084
    nodePort: 32084
  selector:
    app: nexus-oss
status:
  loadBalancer: {}
