azure-k8s-bare/templates/nexus-oss/86-docker-private-service.yaml
# -------------------------------------------------------------------
#
# Module:         k8s-terraform
# Submodule:      templates/nexus-oss/87-docker-private-service.yaml
# Environments:   all
# Purpose:        The yaml for the Nexus OSS docker private registry.
#
# Created on:     16 Jule 2019
# Created by:     David Sanders
# Creator email:  dsanderscanada@nospam-gmail.com
#
# -------------------------------------------------------------------
# Modifed On   | Modified By                 | Release Notes
# -------------------------------------------------------------------
# 16 Jul 2019  | David Sanders               | First release.
# -------------------------------------------------------------------
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus-oss
  name: nexus-docker-private
spec:
  type: NodePort
  ports:
  - name: nexus-docker-port
    port: 18081
    targetPort: 18081
    nodePort: 32081
  selector:
    app: nexus-oss
status:
  loadBalancer: {}
