azure-k8s-bare/templates/nexus-oss/90-ingress.yaml
# -------------------------------------------------------------------
#
# Module:         k8s-terraform
# Submodule:      templates/traefik/5-ingress.yaml
# Environments:   all
# Purpose:        YAML specification to create an ingress for the
#                 Traefik web UI.
#
# Created on:     15 Jule 2019
# Created by:     David Sanders
# Creator email:  dsanderscanada@nospam-gmail.com
#
# -------------------------------------------------------------------
# Modifed On   | Modified By                 | Release Notes
# -------------------------------------------------------------------
# 15 Jul 2019  | David Sanders               | First release.
# -------------------------------------------------------------------
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-oss
spec:
  rules:
  - host: nexus.${LBIP}.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-frontend
          servicePort: nexus-port
